--- a/package.json
+++ b/package.json
@@ -1,24 +1,20 @@
 {
-  "name": "rat_server",
+  "name": "node_server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "engines": {
-    "node": "16.13.2"
+    "node": "18.x"
   },
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "l",
-  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.1",
-    "express": "latest",
-    "multer": "^1.4.4",
-    "node-telegram-bot-api": "latest",
-    "uuid": "^8.3.2",
-    "ws": "latest",
-    "axios": "^0.26.1"
+    "axios": "^1.6.0",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "node-telegram-bot-api": "^0.63.0",
+    "uuid": "^9.0.1",
+    "ws": "^8.16.0"
   }
 }
